--- a/.pylintrc
+++ b/.pylintrc
@@ -8,6 +8,7 @@ disable=
     too-few-public-methods,
     missing-class-docstring,
     missing-function-docstring,
-    bad-continuation
+    bad-continuation,
+    consider-using-enumerate
 
 max-line-length=88
